# cli-snake-rs

./: Cargo.toml  README.md
src/: game.rs  input.rs  main.rs  map.rs
