[package]
name = "snake-rs"
version = "0.1.0"
authors = ["carsin <20868514+carsin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.5"
async-std = "1.6.0"
futures = "0.3.5"
